--- a/style.css
+++ b/style.css
@@ -1,125 +1,206 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
- * {
-     margin: 0;
-     box-sizing: border-box;
- }
+* {
+   font-family: 'Poppins', sans-serif;
+   margin: 0;
+   padding: 0;
+   scroll-behavior: smooth;
+   box-sizing: border-box;
+   scroll-padding-top: 2rem;
+}
 
- body {
-     background-color: #111;
-     font-family: 'Poppins', sans-serif;
- }
+/*variables*/
+:root {
+   --main-color: #ba2725;
+   --second-color: #fff;
+   --hover-color: rgba(51, 51, 51, 0.51);
+   --body-color: #000000;
+   --container-color: #3d3b3b;
+   --text-color: #000000;
+}
 
- .nav {
-     display: flex;
-     justify-content: space-between;
-     position: fixed;
-     top: 0;
-     width: 100%;
-     padding: 20px;
-     z-index: 1;
-     transition-timing-function: ease-in;
-     transition: all 0.5s;
- }
-
- .nav-logo {
-     width: 80px;
- }
-
- .nav-avatar {
-     width: 30px;
-     object-fit: contain;
- }
-
- .banner {
-     color: #fff;
-     object-fit: contain;
-     background-image: url(movies-assets/castlevaniamain.jpg);
-     height: 450px;
-     background-position: top center;
-     background-size: cover;
- }
-
- .banner-contents {
-    margin-left: 30px;
-    padding-top: 140px;
-    height: 190px;
- }
-
- .banner-title {
-    font-size: 3rem;
-    font-weight: 800;
-    padding-bottom: 0.3rem;
- }
-
- .banner-desc {
-    width: 45rem;
-    padding-top: 1rem;
-    font-size: 0.8rem;
-    max-width: 360px;
-    height: 80px;
- }
-
- .banner-button {
-    cursor: pointer;
-    color: #fff;
-    outline: none;
-    border: none;
-    font-weight: 700;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 0.5rem;
-    margin-right: 1rem;
-    background-color: rgba(51, 51, 51, 0.51);
-    padding-bottom: 0.5rem;
- } 
-
- .banner-button:hover {
-    color: #111;
-    background-color: #e6e6e6;
-    transition: all 0.2s;
- }
-
- .banner-fadebottom {
-    height: 7.4rem;
-    background-image: linear-gradient(
-        180deg, 
-        transparent, 
-        rgba(37, 37, 37, 0.61), 
-        #111);
-    margin-top: 145px;
- }
-
- .row {
-     margin-left: 30px;
-     color: #fff;
- }
-
- .row-movies {
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    padding: 20px;
- }
-
- .row-movies::-webkit-scrollbar {
-    display: none;
- }
-
- .row-movie {
-    object-fit: contain;
-    width: 100%;
-    max-height: 100px;
-    margin-right: 10px;
-    transition: transform 450ms;
- }
-
- .row-large-movie {
-    max-height: 250px;
- }
-
- .row-movie:hover {
-    transform: scale(1.13);
- }
+a {
+   text-decoration: none
+}
 
 
+li {
+   list-style: none;
+}
+
+section {
+   padding: 3rem 0 2rem;
+}
+
+img {
+   width: 100%
+}
+
+body {
+   background-color: var(--body-color);
+   color: var(--second-color);
+}
+
+.container {
+   max-width: 1200px;
+   margin: auto;
+   width: 100%;
+}
+
+header {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   background: var(--body-color);
+   z-index: 100;
+}
+
+.nav {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 20px 0;
+}
+
+.logo {
+   width: 80px;
+   text-transform: uppercase;
+   margin: 0 auto 0 0;
+}
+
+.searchbox {
+   max-width: 240px;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   column-gap: 0.7rem;
+   padding: 8px 15px;
+   background: var(--container-color);
+   border-radius: 4rem;
+   color: #fff;
+   margin-right: 1rem;
+}
+
+.searchbox .bx {
+   font-size: 1, 1rem;
+   cursor: pointer;
+}
+
+.searchbox .bx:hover {
+   color: var(--second-color);
+}
+
+#search-input {
+   width: 100%;
+   border: none;
+   outline: none;
+   color: var(--second-color);
+   background: transparent;
+   font-size: 0.983rem;
+}
+
+.user {
+   display: flex;
+}
+
+.user-img {
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   object-fit: cover;
+   object-position: center;
+}
+
+.navbar {
+   position: fixed;
+   top: 50%;
+   transform: translateY(-50%);
+   left: 18px;
+   display: flex;
+   flex-direction: column;
+   row-gap: 2.1rem;
+}
+
+.nav-link {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   color: #3d3b3b;
+}
+
+.nav-link:hover,
+.nav-active {
+   color: var(--second-color);
+   transition: 0.3s all linear;
+   transform: scale(1.1);
+}
+
+.nav-link .bx {
+   font-size: 1.4rem;
+}
+
+.nav-link-title {
+   font-size: 0.7rem;
+}
+
+.home {
+   position: relative;
+   min-height: 470px;
+   display: flex;
+   align-items: center;
+   margin-top: 5rem !important;
+   border-radius: 0.5rem;
+}
+
+.home-img {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   z-index: -1;
+   object-fit: cover;
+   border-radius: 0.7rem;
+}
+
+.home-text {
+   padding-left: 40px;
+}
+
+.home-title {
+   font-size: 2rem;
+   font-weight: 700;
+}
+
+.home-text p {
+   font-size: 0.938rem;
+   margin: 10px 0 20px;
+   color: var(--second-color);
+}
+
+.watch-btn {
+   display: flex;
+   align-items: center;
+   column-gap: 0.8rem;
+   color: var(--second-color);
+}
+
+.watch-btn .bx {
+   font-size: 21px;
+   background-color: var(--main-color);
+   width: 40px;
+   height: 40px;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.watch-btn .bx:hover {
+   background: var(--hover-color);
+}
+
+.watch-btn span{
+   font-size: 1rem;
+   font-weight: 400;
+}
+ 
