--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ header {
    display: flex;
    flex-direction: column;
    align-items: center;
-   color: #3d3b3b;
+   color: #838383;
 }
 
 .nav-link:hover,
@@ -199,8 +199,128 @@ header {
    background: var(--hover-color);
 }
 
-.watch-btn span{
+.watch-btn span {
    font-size: 1rem;
    font-weight: 400;
 }
- 
+
+.heading {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   /* padding: 8px 14px; */
+   /* background: var(--container-color); */
+   margin-bottom: 2rem;
+   /* border-radius: 1rem; */
+}
+
+.heading-title {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   /* padding: 8px 14px; */
+   /* background: var(--container-color); */
+   margin-bottom: 2rem;
+   /* border-radius: 1rem; */
+}
+
+.movie-box {
+   position: relative;
+   align-items: center;
+   width: 100%;
+   height: 380px;
+   overflow: hidden;
+   border-radius: 1rem;
+}
+
+.movie-box-img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.movie-box .box-text {
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+   padding: 14px;
+   background: linear-gradient(8deg,
+         hsl(240 17% 14% / 74%) 14%,
+         hsl(240 17% 14% / 14%) 44%);
+   overflow: hidden;
+}
+
+.movie-title {
+   font-size: 1.4rem;
+   font-weight: 500;
+}
+
+.movie-type {
+   font-size: 0.938rem;
+}
+
+.swiper-btn {
+   display: flex;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+   position: static !important;
+   margin: 0 0 0 10px !important;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+   color: var(--second-color);
+   font-size: 18px !important;
+   font-weight: 700;
+}
+
+.movies .heading {
+   padding: 10px 14px;
+}
+
+/* mudar layout depois*/
+/* slider ou barras*/
+.movies-content {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(247px,1fr));
+   gap: 1.5rem;
+}
+
+.movies-content .movie-box:hover {
+   transform: scale(1.10);
+   transition: 0.3s ease-in;
+}
+
+.see-more {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 2.5rem;
+}
+
+.see-more-btn {
+   background: var(--main-color);
+   padding: 12px 20px;
+   color: var(--second-color);
+   font-weight: 500;
+   border-radius: 0.8rem;
+   cursor: pointer;
+}
+
+.see-more-btn:hover {
+   background: var(--container-color);
+   transition: 0.3s all linear;
+}
+
+.copyright {
+   font-size: 13px;
+   text-align: center;
+   margin-top: 70px;
+}
