--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a {
 li {
    list-style: none;
 }
-
+nav
 section {
    padding: 3rem 0 2rem;
 }
@@ -62,6 +62,84 @@ header {
    justify-content: center;
    padding: 20px 0;
 }
+
+.sub-menu-wrap {
+   position: absolute;
+   top: 100%;
+   right: 10%;
+   width: 320px;
+   max-height: 0px;
+   overflow: hidden;
+   transition: max-height 0.5s;
+}
+
+.sub-menu-wrap.open-menu {
+   max-height: 400px;
+}
+
+.sub-menu {
+   background: var(--text-color);
+   padding: 20px;
+   margin: 10px;
+   border-radius: 2rem;
+}
+
+.user-info {
+   display: flex;
+   align-items: center;
+}
+
+.user-info h3 {
+   font-weight: 500;
+}
+
+.user-info img {
+   width: 60px;
+   border-radius: 50%;
+   margin-right: 15px;
+}
+
+.sub-menu hr {
+   border: 0;
+   height: 1px;
+   width: 100%;
+   background-color: var(--second-color);
+   margin: 15px 0 10px;
+}
+
+.sub-menu-link {
+   display: flex;
+   align-items: center;
+   text-decoration: none;
+   color: var(--second-color);
+   margin: 12px 0;
+}
+
+.sub-menu-link .span{
+   width: 100%;
+}
+
+.sub-menu-link .sm-link {
+   width: 50px;
+   color: var(--second-color);
+   border-radius: 50%;
+   padding: 8px;
+   margin-right: 5px;
+}
+
+.sub-menu-link .arrow {
+   font-size: 22px;
+   transition: transform 0.5s;
+}
+
+.sub-menu-link:hover .arrow{
+   transform: translateX(5px);
+}
+
+.sub-menu-link:hover .span{
+  font-weight: 600;
+}
+
 
 .logo {
    width: 80px;
@@ -208,27 +286,29 @@ header {
    display: flex;
    align-items: center;
    justify-content: space-between;
-   /* padding: 8px 14px; */
-   /* background: var(--container-color); */
+   padding: 8px 14px;
    margin-bottom: 2rem;
-   /* border-radius: 1rem; */
 }
 
 .heading-title {
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   /* padding: 8px 14px; */
-   /* background: var(--container-color); */
-   margin-bottom: 2rem;
-   /* border-radius: 1rem; */
+   font-size: 1.7rem;
+   margin-top: 2rem;
 }
-
+ 
 .movie-box {
    position: relative;
    align-items: center;
    width: 100%;
    height: 380px;
+   overflow: hidden;
+   border-radius: 1rem;
+}
+.movie-box2 {
+   position: relative;
+   object-fit: cover;
+   align-items: center;
+   width: 100%;
+   height: 200px;
    overflow: hidden;
    border-radius: 1rem;
 }
@@ -240,6 +320,22 @@ header {
 }
 
 .movie-box .box-text {
+   position: absolute;
+   object-fit: cover;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+   padding: 14px;
+   background: linear-gradient(8deg,
+         hsl(240 17% 14% / 74%) 14%,
+         hsl(240 17% 14% / 14%) 44%);
+   overflow: hidden;
+}
+.movie-box2 .box-text {
    position: absolute;
    bottom: 0;
    left: 0;
